# aitopiahub

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
assets/music/kids_pool/: music_manifest.json
configs/: base.yaml  fairy_tales.yaml
configs/accounts/: aitopiahub_kids.yaml  aitopiahub_news.yaml
docker/: Dockerfile.app  docker-compose.yml
monitoring/: prometheus.yml
scripts/: deploy_vps.py  get_youtube_token.py  harden_server.sh  install_ops_cron.sh  seed_accounts.py  server_status.sh  test_post.py  trigger_first_flight.py  watchdog.sh
src/: main.py  summarizer.py  trends.py  twitter_bot.py  x_poster.py
src/aitopiahub/: __init__.py
src/aitopiahub/api/: app.py
src/aitopiahub/content_engine/: content_calendar.py  content_formats.py  episode_manager.py  fairy_library.py  hashtag_optimizer.py  llm_client.py  post_generator.py  safety_checker.py
src/aitopiahub/core/: config.py  constants.py  database.py  exceptions.py  logging.py  redis_client.py
src/aitopiahub/image_engine/: carousel_builder.py  image_store.py  pollinations_provider.py  stock_video_provider.py  template_renderer.py
src/aitopiahub/models/: __init__.py  account.py  content.py  engagement.py  feed_source.py  trend.py
src/aitopiahub/monetization/: __init__.py  affiliate_catalog.py  cta_injector.py  link_tracker.py  offer_ranker.py
src/aitopiahub/publisher/: instagram_client.py  queue_manager.py  scheduler.py  youtube_client.py
tests/unit/: test_affiliate_flow.py  test_cost_guard.py  test_episode_manager.py  test_fairy_library.py  test_growth_feedback.py  test_kids_scheduler.py  test_monetization_engine.py  test_music_selector.py  test_publish_payload_fields.py  test_quality_gate.py  test_trend_tasks.py  test_tts_engine.py  test_writer_fairy_mode.py
(+31 files in other folders)
