[tool.poetry]
name = "aitopiahub"
version = "0.1.0"
description = "Akıllı çok hesaplı Instagram bot altyapısı"
authors = ["Aitopiahub Team"]
packages = [{ include = "aitopiahub", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"

# Core
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"
python-dotenv = "^1.0.0"

# Database
sqlalchemy = { extras = ["asyncio"], version = "^2.0.0" }
asyncpg = "^0.29.0"
alembic = "^1.13.0"
pgvector = "^0.3.0"

# Cache / Queue
redis = { extras = ["hiredis"], version = "^5.0.0" }
celery = { extras = ["redis"], version = "^5.4.0" }
celery-redbeat = "^2.2.0"

# LLM
groq = "^0.11.0"
ollama = "^0.3.0"

# Instagram / Social
requests = "^2.32.0"
aiohttp = "^3.10.0"
google-auth-oauthlib = "^1.2.0"
google-api-python-client = "^2.140.0"

# Trend Detection
pytrends = "^4.9.2"
feedparser = "^6.0.11"
praw = "^7.7.1"

# Image Generation / Processing
Pillow = "^10.4.0"
httpx = "^0.27.0"
moviepy = "^1.0.3"
edge-tts = "^6.1.12"
pydub = "^0.25.1"

# NLP / Embeddings
sentence-transformers = "^3.1.0"
numpy = "^1.26.0"

# Monitoring
prometheus-client = "^0.21.0"
structlog = "^24.4.0"

# Utilities
tenacity = "^9.0.0"
cryptography = "^43.0.0"
pyyaml = "^6.0.2"
python-multipart = "^0.0.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
factory-boy = "^3.3.0"
httpx = "^0.27.0"
ruff = "^0.6.0"
mypy = "^1.11.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
